--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
+@import url("https://fonts.googleapis.com/css?family=Amatic+SC");
+
 .App {
+  background: linear-gradient(white, #b3aca3, #d0bdaf, white);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App h1 {
+  font-family:"Amatic SC", sans-serif;
+  font-size: 60px;
+  opacity: 60%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#citationGlobal{
+  color: #467f8c;
+  font-style: italic;
 }
