--- a/src/screens/screensCss/Contact.css
+++ b/src/screens/screensCss/Contact.css
@@ -30,9 +30,9 @@
   background-size: cover;
   opacity: 70%;
   border-radius: 20px;
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 9px 27px -4px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 9px 27px -4px rgba(0,0,0,0.75);
+  box-shadow: 0px 9px 27px -4px rgba(0,0,0,0.75);
   text-decoration: none;
 }
 
