last style and seo

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Amatic+SC");
-
+@import url("https://fonts.googleapis.com/css?family=Baloo+2|Roboto&display=swap");
 
 .App {
   background: linear-gradient(white, #b3aca3, #d0bdaf, white);
@@ -7,11 +7,10 @@
 }
 
 .App h1 {
-  font-family:"Amatic SC", sans-serif;
-  font-size: 60px;
+  font-family: "Amatic SC", sans-serif;
   opacity: 60%;
 }
-#citationGlobal{
+#citationGlobal {
   color: #467f8c;
   font-style: italic;
 }
