--- a/src/screens/screensCss/Acceuil.css
+++ b/src/screens/screensCss/Acceuil.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Amatic+SC");
-@import url("https://fonts.googleapis.com/css?family=Just+Another+Hand|Open+Sans+Condensed:300");
-
 .acceuilContainer {
   display: flex;
   align-items: center;
@@ -11,12 +8,12 @@
 .citationAcceuil {
   font-family: "Amatic SC", sans-serif;
   font-weight: bold;
-  font-size: 10px!important;
+  font-size: 10px !important;
   opacity: 60%;
   height: 30vh;
   margin-top: 10%;
   color: grey;
-  margin-bottom: 10%;;
+  margin-bottom: 10%;
 }
 
 #imgYogiste {
@@ -31,13 +28,15 @@
 
 @media screen and (max-width: 768px) {
   .citationAcceuil {
-    font-size: 20px;
+    font-size: 10px;
   }
-
+  #imgYogiste {
+    width: 60vw;
+    height: 20vh;
+  }
 }
 @media screen and (max-width: 375px) {
   .citationAcceuil {
-    font-size: 15px;
+    font-size: 8px;
   }
-
 }
