--- a/src/screens/screensCss/LaSalle.css
+++ b/src/screens/screensCss/LaSalle.css
@@ -11,7 +11,7 @@
 
 .salleContainer {
   font-size: 25px;
-  font-family: "Lato", sans-serif;
+  font-family: "Baloo 2", sans-serif;
   font-weight: bold;
   width: 80vw;
   margin-bottom: 2%;
@@ -25,7 +25,7 @@
 }
 .stuffContainer {
   font-size: 25px;
-  font-family: "Lato", sans-serif;
+  font-family: "Baloo 2", sans-serif;
   font-weight: bold;
   width: 80vw;
   margin-bottom: 5%;
@@ -35,11 +35,6 @@
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-}
-
-#titlesalle {
-  font-size: 50px;
-  font-weight: bold;
 }
 
 .carrousel {
@@ -66,9 +61,24 @@
     width: 90vw;
     margin-bottom: 25%;
   }
+  .salleContainer {
+    font-size: 18px;
+  }
+  .stuffContainer {
+    margin-top: 20%;
+    font-size: 18px;
+  }
 }
 @media screen and (max-width: 375px) {
   .carrousel {
     height: 34vh;
+  }
+  .salleContainer {
+    font-size: 12px;
+    margin-bottom: 10%;
+  }
+  .stuffContainer {
+    font-size: 12px;
+    margin-top: 10%;
   }
 }
