--- a/src/screens/screensCss/Parcours.css
+++ b/src/screens/screensCss/Parcours.css
@@ -1,7 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Amatic+SC");
-@import url("https://fonts.googleapis.com/css?family=Just+Another+Hand|Open+Sans+Condensed:300");
-@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
-
 .parcoursContainer {
   display: flex;
   align-items: center;
@@ -14,7 +10,7 @@
 .parcours {
   margin-top: 5%;
   font-size: 25px;
-  font-family: "Lato", sans-serif;
+  font-family: "Baloo 2", sans-serif;
   font-weight: bold;
   width: 80vw;
   margin-bottom: 5%;
@@ -24,27 +20,113 @@
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  animation: fadein 1s;
+  -moz-animation: fadein 1s; /* Firefox */
+  -webkit-animation: fadein 1s; /* Safari et Chrome */
+  -o-animation: fadein 1s; /* Opera */
 }
 .containerButton {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  align-items: center;
   width: 70vw;
-
+  margin: 5%;
 }
 .buttonMoreInfos {
-    background-color:#467f8c;
-    color: white;
-    font-size: 30px;;
-    padding: 3vh;
-    border: none;
-    margin-bottom: 3%;
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;;
-    text-decoration: none;
-    font-family: "Amatic SC", sans-serif;
-    font-weight: bold;
+  background-color: #467f8c;
+  color: white;
+  font-size: 30px;
+  padding: 3vh;
+  border: none;
+  margin-bottom: 3%;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  text-decoration: none;
+  font-family: "Amatic SC", sans-serif;
+  font-weight: bold;
 }
-.buttonMoreInfos:focus{
-    outline:  none;
+.buttonMoreInfos:focus {
+  outline: none;
+}
+@media screen and (max-width: 768px) {
+  .parcoursContainer {
+    height: auto;
+  }
+  .parcours {
+    font-size: 12px;
+    height: auto;
+    width: 100vw;
+  }
+  .containerButton {
+    position: sticky;
+    top: 0;
+    margin-top: 2%;
+    z-index: 10;
+    width: auto;
+    justify-content: space-around;
+  }
+  .buttonMoreInfos {
+    width: auto;
+    font-size: 10px;
+    border-radius: 0px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .parcoursContainer {
+    height: auto;
+  }
+  .parcours {
+    font-size: 12px;
+    height: auto;
+    width: 100vw;
+  }
+  .containerButton {
+    position: sticky;
+    top: 0;
+    margin-top: 2%;
+    z-index: 10;
+    width: auto;
+    justify-content: space-around;
+  }
+  .buttonMoreInfos {
+    width: auto;
+    font-size: 10px;
+    border-radius: 0px;
+  }
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadein {
+  /* sur Firefox */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fadein {
+  /* sur Safari et Chrome */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-o-keyframes fadein {
+  /* sur Opera */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
