--- a/src/components/componentsCss/Navbar.css
+++ b/src/components/componentsCss/Navbar.css
@@ -51,7 +51,8 @@
 }
 @media screen and (max-width: 613px) {
   .navbarContainer  {
-    height: 5vh
+    height: 5vh;
+    font-size: 18px;
   }
 }
 @media screen and (max-width: 375px) {
