--- a/src/screens/screensCss/Parcours.css
+++ b/src/screens/screensCss/Parcours.css
@@ -95,6 +95,21 @@
     border-radius: 0px;
   }
 }
+@media screen and (max-width: 377px) {
+  .containerButton {
+    position: sticky;
+    top: 0;
+    margin-top: 2%;
+    z-index: 10;
+    width: auto;
+    justify-content: space-around;
+  }
+  .buttonMoreInfos {
+    width: auto;
+    font-size: 8px;
+    border-radius: 0px;
+  }
+}
 @keyframes fadein {
   from {
     opacity: 0;
