modif bug opacity with netlify

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .App h1 {
   font-family: "Amatic SC", sans-serif;
-  opacity: 60% !important;
+  opacity: 0,6 !important;
 }
 #citationGlobal {
   color: #467f8c;
