--- a/src/screens/screensCss/Acceuil.css
+++ b/src/screens/screensCss/Acceuil.css
@@ -9,7 +9,7 @@
   font-family: "Amatic SC", sans-serif;
   font-weight: bold;
   font-size: 10px !important;
-  opacity: 60%;
+  opacity: 0.6;
   height: 30vh;
   margin-top: 10%;
   color: grey;
