--- a/src/screens/screensCss/Contact.css
+++ b/src/screens/screensCss/Contact.css
@@ -28,7 +28,7 @@
   background-image: url(../../assets/pictures/bambou.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 70%;
+  opacity: 0.7;
   border-radius: 20px;
   -webkit-box-shadow: 0px 9px 27px -4px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 9px 27px -4px rgba(0, 0, 0, 0.75);
@@ -50,7 +50,7 @@
 }
 
 #findUs {
-  opacity: 45%;
+  opacity: 0.45;
 }
 
 @media screen and (max-width: 375px) {
