--- a/src/screens/screensCss/Parcours.css
+++ b/src/screens/screensCss/Parcours.css
@@ -15,7 +15,7 @@
   width: 80vw;
   margin-bottom: 5%;
   background-color: whitesmoke;
-  opacity: 60%;
+  opacity: 0.6;
   border-radius: 20px;
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
