--- a/src/screens/screensCss/LaSalle.css
+++ b/src/screens/screensCss/LaSalle.css
@@ -24,6 +24,7 @@
   margin-top: 2%;
 }
 .stuffContainer {
+  margin-top: 2%;
   font-size: 25px;
   font-family: "Baloo 2", sans-serif;
   font-weight: bold;
