--- a/src/screens/screensCss/Parcours.css
+++ b/src/screens/screensCss/Parcours.css
@@ -83,7 +83,7 @@
   }
   .containerButton {
     position: sticky;
-    top: 0;
+    top: 5;
     margin-top: 2%;
     z-index: 10;
     justify-content: space-around;
@@ -104,6 +104,8 @@
     width: 90vw;
     height: auto;
     justify-content: space-around;
+    position: sticky;
+    top: 5;
   }
   .buttonMoreInfos {
     width: auto;
