--- a/src/screens/screensCss/Acceuil.css
+++ b/src/screens/screensCss/Acceuil.css
@@ -8,7 +8,7 @@
 .citationAcceuil {
   font-family: "Amatic SC", sans-serif;
   font-weight: bold;
-  font-size: 10px !important;
+  font-size: 20px;
   opacity: 0.6;
   height: 30vh;
   margin-top: 10%;
