--- a/src/screens/screensCss/Acceuil.css
+++ b/src/screens/screensCss/Acceuil.css
@@ -21,6 +21,7 @@
   height: 45vh;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
+  object-fit: cover;
   -webkit-box-shadow: 0px 11px 5px 0px rgba(143, 140, 143, 1);
   -moz-box-shadow: 0px 11px 5px 0px rgba(143, 140, 143, 1);
   box-shadow: 0px 11px 5px 0px rgba(143, 140, 143, 1);
