modif acceuil citation

--- a/src/screens/screensCss/Cours_Tarifs.css
+++ b/src/screens/screensCss/Cours_Tarifs.css
@@ -1,6 +1,6 @@
 .coursTarifsContainer {
   width: 99.1vw;
-  height: 130vh;
+  height: auto;
   display: flex;
   font-size: 25px;
   font-weight: bold;
