--- a/src/screens/screensCss/YogGasVer.css
+++ b/src/screens/screensCss/YogGasVer.css
@@ -16,6 +16,11 @@
   -webkit-animation: fadein 1s; /* Safari et Chrome */
   -o-animation: fadein 1s; /* Opera */
 }
+
+#degasquet{
+  height: 100px;
+  width: 100px;
+}
 @keyframes fadein {
   from {
     opacity: 0;
