--- a/src/screens/screensCss/Acceuil.css
+++ b/src/screens/screensCss/Acceuil.css
@@ -8,9 +8,10 @@
 .citationAcceuil {
   font-family: "Amatic SC", sans-serif;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 22px;
   opacity: 0.6;
   height: 30vh;
+  width: auto;
   margin-top: 10%;
   color: grey;
   margin-bottom: 10%;
