--- a/src/screens/screensCss/Contact.css
+++ b/src/screens/screensCss/Contact.css
@@ -28,7 +28,7 @@
   background-image: url(../../assets/pictures/bambou.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 70%;
+  opacity: 0.7;
   border-radius: 20px;
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
