--- a/src/screens/screensCss/YogGasVer.css
+++ b/src/screens/screensCss/YogGasVer.css
@@ -6,7 +6,7 @@
     font-weight: bold;
     width: 80vw;
     margin-bottom: 5%;
-    opacity: 60%;
+    opacity: 0.6;
     background-color: whitesmoke;
     border-radius: 20px;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
